crates/did-core/src/document/snapshots/vercre_didcore__document__service__tests__deserialize_single_string.snap
---
source: did-core/src/document/service.rs
assertion_line: 291
expression: doc
---
service:
  - id: "did:example:123456789abcdefghi#openid"
    type: OpenIdConnectVersion1.0Service
    serviceEndpoint: "https://openid.example.com/"

